hphp/test/zend/bad/ext/standard/tests/general_functions/getopt_002.php
<?php
	var_dump(getopt("2a:vcd1"));
?>
